--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="head">
         <!--now we will make the navigation bar of our website-->
         <nav>
-            <img src="images2/flc_design20240414227778.png" class="logo" alt="logo">
+            <img src="flc_design20240414227778.png" class="logo" alt="logo">
             <div>
                 <button>FOOD</button>
                 <button>SIGN IN</button>
@@ -37,13 +37,13 @@
                     <p>Do not forget to drink water stay hydrated</p>
                 </div>
                 <div class="img">
-                    <img src="images2/waterimage (1).jpg" alt="water">
+                    <img src="waterimage (1).jpg" alt="water">
                 </div>
             </div>
             <hr>
             <div class="row">
                 <div class="img">
-                    <img src="images2/waterfire.jpg" alt="water">
+                    <img src="waterfire.jpg" alt="water">
                 </div>
                 <div class="text">
                     <h2>DO you know.</h2>
@@ -57,7 +57,7 @@
                     <p>Vapours are inivisble to naked eyes,but all around us</p>
                 </div>
                     <div class="img">
-                        <img src="images2/vapour.jpg" alt="water">
+                        <img src="vapour.jpg" alt="water">
                     </div>
             </div>
 
