--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Unlimited food, Bevrages and more.</h1>
             <h3>Eat anywhere,order anytime.</h3>
             <p>Explore Tasty Delights daily.</p>
-            <p>Creat an account if you love food as much as mota do.</p>
+            <p>Create an account if you love food as much as mota do.</p>
             <form class="email">
                 <input type="text" placeholder="email-adress">
                 <button type="submit">Get Started</button>
